--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "22.10.5",
-    "@types/react": "19.0.2",
-    "@types/react-dom": "19.0.2",
-    "autoprefixer": "10.4.20",
-    "eslint": "9.17.0",
-    "eslint-config-next": "15.1.3",
-    "next": "15.1.3",
-    "postcss": "8.4.49",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "tailwindcss": "3.4.17",
-    "typescript": "5.7.2"
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "14.2.22"
+  },
+  "devDependencies": {
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.22"
   }
 }
